<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Space
            android:id="@+id/space1"
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:id="@+id/Name_User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Space
            android:id="@+id/space2"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/UsernameText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Space
            android:id="@+id/space3"
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:ems="10"
            android:hint="@string/user_Password"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/RadioMain"
            android:layout_width="match_parent"
            android:layout_height="144dp">

            <RadioButton
                android:id="@+id/radioAdmin"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:checked="false"
                android:text="@string/radio_Admin" />

            <RadioButton
                android:id="@+id/radioEventOrganiser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/radio_Event_Organizer" />

            <RadioButton
                android:id="@+id/radioParticipant"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/radio_Participant" />
        </RadioGroup>

        <Button
            android:id="@+id/Register"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="openActivity2"
            android:text="@string/user_Register" />

    </LinearLayout>

</RelativeLayout>