<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="90dp" />

        <TextView
            android:id="@+id/Name_User_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/UsernameText2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/PasswordText2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/user_Password"
            android:inputType="text"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/BtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:gravity="center"

            android:text="@string/Login_btn" />

    </LinearLayout>
</RelativeLayout>